src/main/java/a/AnalisisLexico/y.output
   0  $accept : Programa $end

   1  Programa : '{' ListSentencias '}'
   2           | error ListSentencias '}'

   3  ListSentencias : ListSentencias Sentencia ','
   4                 | Sentencia ','
   5                 | Sentencia error

   6  Sentencia : SentenciaControl
   7            | SentenciaDeclarativa
   8            | SentenciaEjecutable
   9            | RETURN ','

  10  ReferenciaObjeto : ID '.' ID

  11  ReferenciaObjetoFuncion : ID '.' LlamadoFuncion

  12  SentenciaEjecutable : Asignacion
  13                      | LlamadoFuncion
  14                      | BloqueIF
  15                      | SalidaMensaje
  16                      | ReferenciaObjetoFuncion

  17  ListSentenciasClase : ListSentenciasClase SentenciaDeclarativa ','
  18                      | SentenciaDeclarativa ','
  19                      | RETURN ','
  20                      | ListSentenciasClase RETURN ','

  21  SentenciaDeclarativa : Tipo ListVariables
  22                       | ListFuncion
  23                       | error ListVariables
  24                       | Tipo error
  25                       | Clase
  26                       | Objeto_clase
  27                       | FuncionIMPL

  28  ListVariables : ID
  29                | ListVariables ';' ID

  30  Objeto_clase : ID ListVariablesObj

  31  ListVariablesObj : ID
  32                   | ListVariablesObj ';' ID

  33  Tipo : USHORT
  34       | INT
  35       | DOUBLE

  36  Constante : ENTERO
  37            | ENTEROCORTO
  38            | '-' ENTEROCORTO
  39            | PUNTOFLOTANTE
  40            | '-' ENTERO
  41            | '-' PUNTOFLOTANTE

  42  Expresion : Expresion '+' Termino
  43            | Expresion '-' Termino
  44            | Termino
  45            | ConversionExplicita

  46  Termino : Termino '*' Factor
  47          | Termino '/' Factor
  48          | Factor
  49          | Termino '*' Factor_RefObjeto
  50          | Termino '/' Factor_RefObjeto
  51          | Factor_RefObjeto

  52  Factor : ID
  53         | Constante

  54  Factor_RefObjeto : ReferenciaObjeto

  55  Condicion : '(' Expresion Comparador Expresion ')'
  56            | '(' Expresion Comparador Expresion error
  57            | error Expresion Comparador Expresion ')'

  58  BloqueIF : IF Condicion CuerpoIF ELSE CuerpoIF END_IF
  59           | IF Condicion CuerpoIF END_IF
  60           | IF Condicion CuerpoIF ELSE CuerpoIF error
  61           | IF Condicion CuerpoIF error
  62           | IF Condicion SentenciaEjecutable ',' ELSE CuerpoIF END_IF
  63           | IF Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF
  64           | IF Condicion CuerpoIF ELSE SentenciaEjecutable ',' END_IF
  65           | IF Condicion SentenciaEjecutable ',' ELSE CuerpoIF error
  66           | IF Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable error
  67           | IF Condicion CuerpoIF ELSE SentenciaEjecutable ',' error
  68           | IF Condicion SentenciaEjecutable ',' error CuerpoIF END_IF
  69           | IF Condicion SentenciaEjecutable ',' error SentenciaEjecutable END_IF
  70           | IF Condicion SentenciaEjecutable error ELSE CuerpoIF END_IF
  71           | IF Condicion CuerpoIF ELSE SentenciaEjecutable error END_IF
  72           | IF Condicion SentenciaEjecutable error END_IF

  73  CuerpoIF : '{' SentenciasIF '}'
  74           | '{' SentenciasIF RETURN ',' '}'
  75           | '{' SentenciasIF RETURN error '}'
  76           | error SentenciasIF '}'
  77           | '{' SentenciasIF error
  78           | '{' '}'

  79  SentenciasIF : ListaSentenciasIF

  80  ListaSentenciasIF : error
  81                    | SentenciaEjecutable ','
  82                    | SentenciaEjecutable error
  83                    | ListaSentenciasIF SentenciaEjecutable ','

  84  Comparador : '<'
  85             | '>'
  86             | MAYORIGUAL
  87             | MENORIGUAL
  88             | IGUAL
  89             | DIST

  90  ListFuncion : Funcion
  91              | FuncionSinCuerpo

  92  Funcion : EncabezadoFuncion Parametro '{' ListSentenciasFuncion '}' RETURN ','
  93          | EncabezadoFuncion Parametro '{' ListSentenciasFuncion RETURN ',' '}'
  94          | EncabezadoFuncion Parametro '{' ListSentenciasFuncion '}'
  95          | VOID error Parametro '{' ListSentenciasFuncion '}'
  96          | EncabezadoFuncion Parametro '{' '}'

  97  EncabezadoFuncion : VOID ID

  98  Parametro : '(' Tipo ID ')'
  99            | '(' Tipo ID error
 100            | error Tipo ID ')'
 101            | '(' ')'
 102            | '(' error
 103            | error ')'

 104  ListSentenciasFuncion : ListSentenciasFuncion Sentencia ','
 105                        | Sentencia ','
 106                        | SentenciaEjecutable error
 107                        | SentenciaDeclarativa error
 108                        | RETURN error

 109  LlamadoFuncion : ID '(' ')'
 110                 | ID error ')'
 111                 | ID '(' error
 112                 | ID '(' Expresion ')'

 113  SalidaMensaje : PRINT CADENA
 114                | PRINT Factor
 115                | PRINT error

 116  OperadorAsignacion : '='
 117                     | ASIG

 118  Asignacion : Factor OperadorAsignacion Expresion
 119             | ReferenciaObjeto OperadorAsignacion ReferenciaObjeto
 120             | ReferenciaObjeto OperadorAsignacion Factor
 121             | ReferenciaObjeto OperadorAsignacion error
 122             | Factor OperadorAsignacion error
 123             | OperadorAsignacion Factor

 124  SentenciaControl : DO CuerpoIF UNTIL Condicion
 125                   | DO CuerpoIF UNTIL error
 126                   | DO SentenciaEjecutable ',' UNTIL Condicion
 127                   | DO SentenciaEjecutable ',' UNTIL error
 128                   | DO error UNTIL Condicion
 129                   | DO SentenciaEjecutable UNTIL Condicion

 130  ParametroTOD : '(' Expresion ')'
 131               | error Expresion ')'
 132               | '(' Expresion error

 133  ConversionExplicita : TOD ParametroTOD
 134                      | TOD '(' ')'

 135  ListClase : '{' ListSentenciasClase '}'

 136  EncabezadoClase : CLASS ID

 137  Clase : EncabezadoClase ListClase

 138  FuncionSinCuerpo : EncabezadoFuncion Parametro

 139  FuncionIMPL : IMPL FOR ID ':' '{' Funcion '}'
 140              | IMPL FOR ID ':' error Funcion '}'
 141              | IMPL FOR ID ':' error Funcion '}'
 142              | IMPL FOR ID ':' '{' Funcion error

state 0
	$accept : . Programa $end  (0)

	error  shift 1
	'{'  shift 2
	.  error

	Programa  goto 3


state 1
	Programa : error . ListSentencias '}'  (2)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	ListSentencias  goto 22
	Sentencia  goto 23
	SentenciaControl  goto 24
	SentenciaDeclarativa  goto 25
	SentenciaEjecutable  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 2
	Programa : '{' . ListSentencias '}'  (1)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	ListSentencias  goto 45
	Sentencia  goto 23
	SentenciaControl  goto 24
	SentenciaDeclarativa  goto 25
	SentenciaEjecutable  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 3
	$accept : Programa . $end  (0)

	$end  accept


state 4
	SentenciaDeclarativa : error . ListVariables  (23)

	ID  shift 46
	.  error

	ListVariables  goto 47


state 5
	BloqueIF : IF . Condicion CuerpoIF ELSE CuerpoIF END_IF  (58)
	BloqueIF : IF . Condicion CuerpoIF END_IF  (59)
	BloqueIF : IF . Condicion CuerpoIF ELSE CuerpoIF error  (60)
	BloqueIF : IF . Condicion CuerpoIF error  (61)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE CuerpoIF END_IF  (62)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF  (63)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable ',' END_IF  (64)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE CuerpoIF error  (65)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable error  (66)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable ',' error  (67)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' error CuerpoIF END_IF  (68)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' error SentenciaEjecutable END_IF  (69)
	BloqueIF : IF . Condicion SentenciaEjecutable error ELSE CuerpoIF END_IF  (70)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable error END_IF  (71)
	BloqueIF : IF . Condicion SentenciaEjecutable error END_IF  (72)

	error  shift 48
	'('  shift 49
	.  error

	Condicion  goto 50


state 6
	SalidaMensaje : PRINT . CADENA  (113)
	SalidaMensaje : PRINT . Factor  (114)
	SalidaMensaje : PRINT . error  (115)

	error  shift 51
	ID  shift 52
	CADENA  shift 53
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	Constante  goto 38
	Factor  goto 54


state 7
	EncabezadoClase : CLASS . ID  (136)

	ID  shift 55
	.  error


state 8
	Funcion : VOID . error Parametro '{' ListSentenciasFuncion '}'  (95)
	EncabezadoFuncion : VOID . ID  (97)

	error  shift 56
	ID  shift 57
	.  error


state 9
	SentenciaControl : DO . CuerpoIF UNTIL Condicion  (124)
	SentenciaControl : DO . CuerpoIF UNTIL error  (125)
	SentenciaControl : DO . SentenciaEjecutable ',' UNTIL Condicion  (126)
	SentenciaControl : DO . SentenciaEjecutable ',' UNTIL error  (127)
	SentenciaControl : DO . error UNTIL Condicion  (128)
	SentenciaControl : DO . SentenciaEjecutable UNTIL Condicion  (129)

	error  shift 58
	IF  shift 5
	PRINT  shift 6
	ID  shift 59
	ASIG  shift 15
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'{'  shift 60
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 61
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	CuerpoIF  goto 62
	OperadorAsignacion  goto 43


state 10
	FuncionIMPL : IMPL . FOR ID ':' '{' Funcion '}'  (139)
	FuncionIMPL : IMPL . FOR ID ':' error Funcion '}'  (140)
	FuncionIMPL : IMPL . FOR ID ':' error Funcion '}'  (141)
	FuncionIMPL : IMPL . FOR ID ':' '{' Funcion error  (142)

	FOR  shift 63
	.  error


state 11
	Tipo : INT .  (34)

	.  reduce 34


state 12
	Tipo : USHORT .  (33)

	.  reduce 33


state 13
	Tipo : DOUBLE .  (35)

	.  reduce 35


state 14
	ReferenciaObjeto : ID . '.' ID  (10)
	ReferenciaObjetoFuncion : ID . '.' LlamadoFuncion  (11)
	Objeto_clase : ID . ListVariablesObj  (30)
	Factor : ID .  (52)
	LlamadoFuncion : ID . '(' ')'  (109)
	LlamadoFuncion : ID . error ')'  (110)
	LlamadoFuncion : ID . '(' error  (111)
	LlamadoFuncion : ID . '(' Expresion ')'  (112)

	error  shift 64
	ID  shift 65
	'.'  shift 66
	'('  shift 67
	ASIG  reduce 52
	'='  reduce 52

	ListVariablesObj  goto 68


state 15
	OperadorAsignacion : ASIG .  (117)

	.  reduce 117


state 16
	Sentencia : RETURN . ','  (9)

	','  shift 69
	.  error


state 17
	Constante : ENTERO .  (36)

	.  reduce 36


state 18
	Constante : ENTEROCORTO .  (37)

	.  reduce 37


state 19
	Constante : PUNTOFLOTANTE .  (39)

	.  reduce 39


state 20
	Constante : '-' . ENTEROCORTO  (38)
	Constante : '-' . ENTERO  (40)
	Constante : '-' . PUNTOFLOTANTE  (41)

	ENTERO  shift 70
	ENTEROCORTO  shift 71
	PUNTOFLOTANTE  shift 72
	.  error


state 21
	OperadorAsignacion : '=' .  (116)

	.  reduce 116


state 22
	Programa : error ListSentencias . '}'  (2)
	ListSentencias : ListSentencias . Sentencia ','  (3)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 73
	'-'  shift 20
	'='  shift 21
	.  error

	Sentencia  goto 74
	SentenciaControl  goto 24
	SentenciaDeclarativa  goto 25
	SentenciaEjecutable  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 23
	ListSentencias : Sentencia . ','  (4)
	ListSentencias : Sentencia . error  (5)

	error  shift 75
	','  shift 76
	.  error


state 24
	Sentencia : SentenciaControl .  (6)

	.  reduce 6


state 25
	Sentencia : SentenciaDeclarativa .  (7)

	.  reduce 7


state 26
	Sentencia : SentenciaEjecutable .  (8)

	.  reduce 8


state 27
	Asignacion : ReferenciaObjeto . OperadorAsignacion ReferenciaObjeto  (119)
	Asignacion : ReferenciaObjeto . OperadorAsignacion Factor  (120)
	Asignacion : ReferenciaObjeto . OperadorAsignacion error  (121)

	ASIG  shift 15
	'='  shift 21
	.  error

	OperadorAsignacion  goto 77


state 28
	SentenciaEjecutable : ReferenciaObjetoFuncion .  (16)

	.  reduce 16


state 29
	SentenciaEjecutable : LlamadoFuncion .  (13)

	.  reduce 13


state 30
	SentenciaEjecutable : Asignacion .  (12)

	.  reduce 12


state 31
	SentenciaEjecutable : BloqueIF .  (14)

	.  reduce 14


state 32
	SentenciaEjecutable : SalidaMensaje .  (15)

	.  reduce 15


state 33
	SentenciaDeclarativa : Tipo . ListVariables  (21)
	SentenciaDeclarativa : Tipo . error  (24)

	error  shift 78
	ID  shift 46
	.  error

	ListVariables  goto 79


state 34
	SentenciaDeclarativa : ListFuncion .  (22)

	.  reduce 22


state 35
	SentenciaDeclarativa : Clase .  (25)

	.  reduce 25


state 36
	SentenciaDeclarativa : Objeto_clase .  (26)

	.  reduce 26


state 37
	SentenciaDeclarativa : FuncionIMPL .  (27)

	.  reduce 27


state 38
	Factor : Constante .  (53)

	.  reduce 53


state 39
	Asignacion : Factor . OperadorAsignacion Expresion  (118)
	Asignacion : Factor . OperadorAsignacion error  (122)

	ASIG  shift 15
	'='  shift 21
	.  error

	OperadorAsignacion  goto 80


state 40
	ListFuncion : Funcion .  (90)

	.  reduce 90


state 41
	ListFuncion : FuncionSinCuerpo .  (91)

	.  reduce 91


state 42
	Funcion : EncabezadoFuncion . Parametro '{' ListSentenciasFuncion '}' RETURN ','  (92)
	Funcion : EncabezadoFuncion . Parametro '{' ListSentenciasFuncion RETURN ',' '}'  (93)
	Funcion : EncabezadoFuncion . Parametro '{' ListSentenciasFuncion '}'  (94)
	Funcion : EncabezadoFuncion . Parametro '{' '}'  (96)
	FuncionSinCuerpo : EncabezadoFuncion . Parametro  (138)

	error  shift 81
	'('  shift 82
	.  error

	Parametro  goto 83


state 43
	Asignacion : OperadorAsignacion . Factor  (123)

	ID  shift 52
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	Constante  goto 38
	Factor  goto 84


state 44
	Clase : EncabezadoClase . ListClase  (137)

	'{'  shift 85
	.  error

	ListClase  goto 86


state 45
	Programa : '{' ListSentencias . '}'  (1)
	ListSentencias : ListSentencias . Sentencia ','  (3)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 87
	'-'  shift 20
	'='  shift 21
	.  error

	Sentencia  goto 74
	SentenciaControl  goto 24
	SentenciaDeclarativa  goto 25
	SentenciaEjecutable  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 46
	ListVariables : ID .  (28)

	.  reduce 28


state 47
	SentenciaDeclarativa : error ListVariables .  (23)
	ListVariables : ListVariables . ';' ID  (29)

	';'  shift 88
	error  reduce 23
	','  reduce 23


state 48
	Condicion : error . Expresion Comparador Expresion ')'  (57)

	ID  shift 89
	TOD  shift 90
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 91
	Constante  goto 38
	Expresion  goto 92
	Termino  goto 93
	ConversionExplicita  goto 94
	Factor  goto 95
	Factor_RefObjeto  goto 96


state 49
	Condicion : '(' . Expresion Comparador Expresion ')'  (55)
	Condicion : '(' . Expresion Comparador Expresion error  (56)

	ID  shift 89
	TOD  shift 90
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 91
	Constante  goto 38
	Expresion  goto 97
	Termino  goto 93
	ConversionExplicita  goto 94
	Factor  goto 95
	Factor_RefObjeto  goto 96


state 50
	BloqueIF : IF Condicion . CuerpoIF ELSE CuerpoIF END_IF  (58)
	BloqueIF : IF Condicion . CuerpoIF END_IF  (59)
	BloqueIF : IF Condicion . CuerpoIF ELSE CuerpoIF error  (60)
	BloqueIF : IF Condicion . CuerpoIF error  (61)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE CuerpoIF END_IF  (62)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF  (63)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable ',' END_IF  (64)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE CuerpoIF error  (65)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE SentenciaEjecutable error  (66)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable ',' error  (67)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' error CuerpoIF END_IF  (68)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' error SentenciaEjecutable END_IF  (69)
	BloqueIF : IF Condicion . SentenciaEjecutable error ELSE CuerpoIF END_IF  (70)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable error END_IF  (71)
	BloqueIF : IF Condicion . SentenciaEjecutable error END_IF  (72)

	error  shift 98
	IF  shift 5
	PRINT  shift 6
	ID  shift 59
	ASIG  shift 15
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'{'  shift 60
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 99
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	CuerpoIF  goto 100
	OperadorAsignacion  goto 43


state 51
	SalidaMensaje : PRINT error .  (115)

	.  reduce 115


state 52
	Factor : ID .  (52)

	.  reduce 52


state 53
	SalidaMensaje : PRINT CADENA .  (113)

	.  reduce 113


state 54
	SalidaMensaje : PRINT Factor .  (114)

	.  reduce 114


state 55
	EncabezadoClase : CLASS ID .  (136)

	.  reduce 136


state 56
	Funcion : VOID error . Parametro '{' ListSentenciasFuncion '}'  (95)

	error  shift 81
	'('  shift 82
	.  error

	Parametro  goto 101


state 57
	EncabezadoFuncion : VOID ID .  (97)

	.  reduce 97


state 58
	CuerpoIF : error . SentenciasIF '}'  (76)
	SentenciaControl : DO error . UNTIL Condicion  (128)

	error  shift 102
	IF  shift 5
	PRINT  shift 6
	UNTIL  shift 103
	ID  shift 59
	ASIG  shift 15
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 104
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	SentenciasIF  goto 105
	ListaSentenciasIF  goto 106
	OperadorAsignacion  goto 43


state 59
	ReferenciaObjeto : ID . '.' ID  (10)
	ReferenciaObjetoFuncion : ID . '.' LlamadoFuncion  (11)
	Factor : ID .  (52)
	LlamadoFuncion : ID . '(' ')'  (109)
	LlamadoFuncion : ID . error ')'  (110)
	LlamadoFuncion : ID . '(' error  (111)
	LlamadoFuncion : ID . '(' Expresion ')'  (112)

	error  shift 64
	'.'  shift 66
	'('  shift 67
	ASIG  reduce 52
	'='  reduce 52


state 60
	CuerpoIF : '{' . SentenciasIF '}'  (73)
	CuerpoIF : '{' . SentenciasIF RETURN ',' '}'  (74)
	CuerpoIF : '{' . SentenciasIF RETURN error '}'  (75)
	CuerpoIF : '{' . SentenciasIF error  (77)
	CuerpoIF : '{' . '}'  (78)

	error  shift 102
	IF  shift 5
	PRINT  shift 6
	ID  shift 59
	ASIG  shift 15
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 107
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 104
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	SentenciasIF  goto 108
	ListaSentenciasIF  goto 106
	OperadorAsignacion  goto 43


state 61
	SentenciaControl : DO SentenciaEjecutable . ',' UNTIL Condicion  (126)
	SentenciaControl : DO SentenciaEjecutable . ',' UNTIL error  (127)
	SentenciaControl : DO SentenciaEjecutable . UNTIL Condicion  (129)

	UNTIL  shift 109
	','  shift 110
	.  error


state 62
	SentenciaControl : DO CuerpoIF . UNTIL Condicion  (124)
	SentenciaControl : DO CuerpoIF . UNTIL error  (125)

	UNTIL  shift 111
	.  error


state 63
	FuncionIMPL : IMPL FOR . ID ':' '{' Funcion '}'  (139)
	FuncionIMPL : IMPL FOR . ID ':' error Funcion '}'  (140)
	FuncionIMPL : IMPL FOR . ID ':' error Funcion '}'  (141)
	FuncionIMPL : IMPL FOR . ID ':' '{' Funcion error  (142)

	ID  shift 112
	.  error


state 64
	LlamadoFuncion : ID error . ')'  (110)

	')'  shift 113
	.  error


state 65
	ListVariablesObj : ID .  (31)

	.  reduce 31


state 66
	ReferenciaObjeto : ID '.' . ID  (10)
	ReferenciaObjetoFuncion : ID '.' . LlamadoFuncion  (11)

	ID  shift 114
	.  error

	LlamadoFuncion  goto 115


state 67
	LlamadoFuncion : ID '(' . ')'  (109)
	LlamadoFuncion : ID '(' . error  (111)
	LlamadoFuncion : ID '(' . Expresion ')'  (112)

	error  shift 116
	ID  shift 89
	TOD  shift 90
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	')'  shift 117
	.  error

	ReferenciaObjeto  goto 91
	Constante  goto 38
	Expresion  goto 118
	Termino  goto 93
	ConversionExplicita  goto 94
	Factor  goto 95
	Factor_RefObjeto  goto 96


state 68
	Objeto_clase : ID ListVariablesObj .  (30)
	ListVariablesObj : ListVariablesObj . ';' ID  (32)

	';'  shift 119
	error  reduce 30
	','  reduce 30


state 69
	Sentencia : RETURN ',' .  (9)

	.  reduce 9


state 70
	Constante : '-' ENTERO .  (40)

	.  reduce 40


state 71
	Constante : '-' ENTEROCORTO .  (38)

	.  reduce 38


state 72
	Constante : '-' PUNTOFLOTANTE .  (41)

	.  reduce 41


state 73
	Programa : error ListSentencias '}' .  (2)

	.  reduce 2


state 74
	ListSentencias : ListSentencias Sentencia . ','  (3)

	','  shift 120
	.  error


state 75
	ListSentencias : Sentencia error .  (5)

	.  reduce 5


state 76
	ListSentencias : Sentencia ',' .  (4)

	.  reduce 4


state 77
	Asignacion : ReferenciaObjeto OperadorAsignacion . ReferenciaObjeto  (119)
	Asignacion : ReferenciaObjeto OperadorAsignacion . Factor  (120)
	Asignacion : ReferenciaObjeto OperadorAsignacion . error  (121)

	error  shift 121
	ID  shift 89
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 122
	Constante  goto 38
	Factor  goto 123


state 78
	SentenciaDeclarativa : Tipo error .  (24)

	.  reduce 24


state 79
	SentenciaDeclarativa : Tipo ListVariables .  (21)
	ListVariables : ListVariables . ';' ID  (29)

	';'  shift 88
	error  reduce 21
	','  reduce 21


state 80
	Asignacion : Factor OperadorAsignacion . Expresion  (118)
	Asignacion : Factor OperadorAsignacion . error  (122)

	error  shift 124
	ID  shift 89
	TOD  shift 90
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 91
	Constante  goto 38
	Expresion  goto 125
	Termino  goto 93
	ConversionExplicita  goto 94
	Factor  goto 95
	Factor_RefObjeto  goto 96


state 81
	Parametro : error . Tipo ID ')'  (100)
	Parametro : error . ')'  (103)

	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	')'  shift 126
	.  error

	Tipo  goto 127


state 82
	Parametro : '(' . Tipo ID ')'  (98)
	Parametro : '(' . Tipo ID error  (99)
	Parametro : '(' . ')'  (101)
	Parametro : '(' . error  (102)

	error  shift 128
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	')'  shift 129
	.  error

	Tipo  goto 130


state 83
	Funcion : EncabezadoFuncion Parametro . '{' ListSentenciasFuncion '}' RETURN ','  (92)
	Funcion : EncabezadoFuncion Parametro . '{' ListSentenciasFuncion RETURN ',' '}'  (93)
	Funcion : EncabezadoFuncion Parametro . '{' ListSentenciasFuncion '}'  (94)
	Funcion : EncabezadoFuncion Parametro . '{' '}'  (96)
	FuncionSinCuerpo : EncabezadoFuncion Parametro .  (138)

	'{'  shift 131
	error  reduce 138
	','  reduce 138


state 84
	Asignacion : OperadorAsignacion Factor .  (123)

	.  reduce 123


state 85
	ListClase : '{' . ListSentenciasClase '}'  (135)

	error  shift 4
	CLASS  shift 7
	VOID  shift 8
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 132
	RETURN  shift 133
	.  error
